src/scss/abstracts/_animation-mixins.scss
// Underlines the text on hover from left to right with a color of your choice.
// The underline will expand to the full width of the text on hover. The text color will change on hover as well. The text will scale up on hover and scale back down on click.

@mixin hover-underline-self($text-underline-color, $scale-hover: 1.01, $scale-active: 1) {
    & {
        position: relative;
        color: $text-underline-color;
        margin-bottom: 0;
        cursor: pointer;
        width: fit-content;
    }

    &::before {
        content: '';
        position: absolute;
        left: 0;
        bottom: 0;
        width: 0;
        height: 2px;
        background-color: $text-underline-color;
        transition: transform 0.3s ease-in-out, width 0.3s ease-in-out; // Add transition delay
    }

    &:hover {
        transform: scale($scale-hover);

        &::before {
            width: 100%; // Expanding the underline on hover
        }
    }

    &:hover:active {
        transform: scale($scale-active);
    }

    @content;
}

@mixin hover-underline-active($hover-text-underline-color, $hover-scale: 1.01, $active-scale: 1) {
    &:hover {
        transform: scale($hover-scale);
        color: $hover-text-underline-color;
        transition: transform 0.3s ease-in-out; // Add transition delay for scale
    }

    &:hover:active {
        transform: scale($active-scale);
    }
}

@mixin hover-underline-before($underline-color) {
    position: relative;
    color: inherit;
    margin-bottom: 0;

    &::before {
        content: '';
        position: absolute;
        left: 0;
        bottom: -1px;
        width: 0;
        height: 2px;
        background-color: $underline-color;
        transition: width 0.3s ease-in-out; // Add transition delay for underline
    }

    &:hover::before {
        width: 100%;
    }
}

// Targets a class to underline on hover from left to right with a color of your choice.
// The underline will expand to the full width of the text on hover. The text color will change on hover as well. The text will scale up on hover and scale back down on click.

@mixin hover-underline-target-class($target-class, $scale-hover: 1.02, $scale-active: 1) {
    &:hover {
        transform: scale($scale-hover);
        transition: transform 0.3s ease-in-out; // Apply delay to the scale

        #{$target-class}::before {
            width: 100%;
            transition: width 0.3s ease-in-out; // Apply delay to the underline
        }
    }

    &:hover:active {
        transform: scale($scale-active);
    }
}

